--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -244,6 +244,7 @@
     <Compile Include="AmazedSaint\NodeType.cs" />
     <Compile Include="AmazedSaint\SimpleHierarchyWrapper.cs" />
     <Compile Include="Graphics\Imaging\FastBitmap.cs" />
+    <Compile Include="Internet\Browser\AwesomiumWrapper.cs" />
     <Compile Include="Parsing\Strand.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Collections\AbstractBlockingQueue.cs" />
