--- a/packages.config
+++ b/packages.config
@@ -33,6 +33,8 @@
   <package id="Lz4.Net" version="1.0.98" targetFramework="net453" />
   <package id="ManagedEsent" version="1.9.2.0" targetFramework="net453" />
   <package id="MathNet.Numerics" version="3.3.0" targetFramework="net453" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net453" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net453" />
   <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net453" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net453" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net451" />
