--- a/Librainian 2015.csproj
+++ b/Librainian 2015.csproj
@@ -272,7 +272,7 @@
     <Compile Include="Gaming\IPlayerTable.cs" />
     <Compile Include="Gaming\PlayerTable.cs" />
     <Compile Include="Gaming\PlayingCards\FaceValues.cs" />
-    <Compile Include="Gaming\PlayingCards\Suites.cs" />
+    <Compile Include="Gaming\PlayingCards\Suite.cs" />
     <Compile Include="Graphics\Imaging\ERG.cs" />
     <Compile Include="Graphics\Moving\EFV.cs" />
     <Compile Include="Graphics\GraphicsExtensions.cs" />
