--- a/packages.config
+++ b/packages.config
@@ -1,27 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AForge" version="2.2.5" targetFramework="net46" />
-  <package id="AForge.Math" version="2.2.5" targetFramework="net46" />
-  <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net46" />
-  <package id="Clojure" version="1.6.0.1" targetFramework="net46" />
-  <package id="CodeFluentRuntimeClient" version="1.0.0.792" targetFramework="net453" />
-  <package id="CsQuery" version="1.3.4" targetFramework="net453" />
-  <package id="DotNetZip" version="1.9.3" targetFramework="net453" />
-  <package id="EntityFramework" version="6.1.2" targetFramework="net453" />
-  <package id="FluentAssertions" version="3.2.2" targetFramework="net46" />
-  <package id="ManagedEsent" version="1.9.2.0" targetFramework="net46" />
-  <package id="MathNet.Numerics" version="3.5.0" targetFramework="net453" />
-  <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net46" />
-  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net46" />
-  <package id="mongocsharpdriver" version="1.9.2" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net453" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net453" />
-  <package id="NUnit" version="2.6.4" targetFramework="net453" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net451" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net451" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net451" />
-  <package id="VirtualPath" version="0.3.0" targetFramework="net453" />
-  <package id="WolframAPI" version="1.2" targetFramework="net451" />
+  <package id="AForge" version="2.2.5" targetFramework="net46" userInstalled="true" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net46" userInstalled="true" />
+  <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net46" userInstalled="true" />
+  <package id="Clojure" version="1.6.0.1" targetFramework="net46" userInstalled="true" />
+  <package id="CodeFluentRuntimeClient" version="1.0.0.803" targetFramework="net46" userInstalled="true" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net453" userInstalled="true" />
+  <package id="DotNetZip" version="1.9.3" targetFramework="net453" userInstalled="true" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" userInstalled="true" />
+  <package id="FluentAssertions" version="3.3.0" targetFramework="net46" userInstalled="true" />
+  <package id="ManagedEsent" version="1.9.2.0" targetFramework="net46" userInstalled="true" />
+  <package id="MathNet.Numerics" version="3.5.0" targetFramework="net453" userInstalled="true" />
+  <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net46" userInstalled="true" />
+  <package id="mongocsharpdriver" version="1.10.0" targetFramework="net46" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net453" userInstalled="true" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net453" userInstalled="true" />
+  <package id="NUnit" version="2.6.4" targetFramework="net453" userInstalled="true" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net451" userInstalled="true" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" userInstalled="true" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net451" userInstalled="true" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net451" userInstalled="true" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net451" userInstalled="true" />
+  <package id="TaskParallelLibrary" version="1.0.2856" targetFramework="net46" userInstalled="true" />
+  <package id="VirtualPath" version="0.3.0" targetFramework="net453" userInstalled="true" />
+  <package id="WolframAPI" version="1.2" targetFramework="net451" userInstalled="true" />
 </packages>
